<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>SupplierManagementWidget</class>
 <widget class="QWidget" name="SupplierManagementWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>750</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <!-- Thanh c√¥ng c·ª• (Toolbar) -->
    <widget class="QWidget" name="toolBarWidget" native="true">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QPushButton" name="addButton">
        <property name="text">
         <string>‚ûï Th√™m Nh√† Cung C·∫•p</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>T√¨m ki·∫øm theo:</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QComboBox" name="searchCriteriaComboBox">
        <item>
         <property name="text">
          <string>T√™n Nh√† Cung C·∫•p</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>M√£ Nh√† Cung C·∫•p</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="searchLineEdit">
        <property name="placeholderText">
         <string>Nh·∫≠p t·ª´ kh√≥a...</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="searchButton">
        <property name="text">
         <string>üîç T√¨m</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <!-- B·∫£ng d·ªØ li·ªáu ch√≠nh -->
    <widget class="QTableWidget" name="supplierTable">
     <property name="editTriggers">
      <set>QAbstractItemView::NoEditTriggers</set>
     </property>
     <property name="selectionBehavior">
      <enum>QAbstractItemView::SelectRows</enum>
     </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
     <column>
      <property name="text">
       <string>M√£ NCC</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>T√™n Nh√† Cung C·∫•p</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>ƒê·ªãa ch·ªâ</string>
      </property>
     </column>
     <column>
      <property name="text">
       <string>S·ªë ƒëi·ªán tho·∫°i</string>
      </property>
     </column>
    </widget>
   </item>
   <item>
    <!-- C√°c n√∫t h√†nh ƒë·ªông (Action buttons) -->
    <widget class="QWidget" name="actionButtonsWidget" native="true">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="editButton">
        <property name="text">
         <string>‚úèÔ∏è S·ª≠a</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="deleteButton">
        <property name="text">
         <string>üóëÔ∏è X√≥a</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>